--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -42,6 +42,12 @@ img {
     animation: loading 1.1s infinite linear;
 }
 
+.icon-btn {
+  padding: 0;
+  border: none;
+  background: transparent;
+}
+
 @keyframes loading {
     0% {
         transform: rotate(0deg);
