--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -59,7 +59,7 @@ img {
 }
 
 .list-item:not(:last-child) {
-  padding-right: 10px;
+  padding-right: 8px;
   margin-right: 5px;
 }
 
@@ -71,7 +71,7 @@ img {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: dimgrey;
+  background: #721c24;
 
 }
 
