--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -72,7 +72,10 @@ img {
   height: 4px;
   border-radius: 50%;
   background: #721c24;
+}
 
+.nav-link.active {
+  background: red;
 }
 
 @keyframes loading {
