--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -31,7 +31,7 @@ img {
 
 .loader span {
     position: absolute;
-    top: 50vh;
+    top: 50%;
     left: 50%;
     width: 50px;
     height: 50px;
