--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -25,7 +25,8 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #fff;
+    min-height: 700px;
+    background: transparent;
     z-index: 999;
 }
 
