--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -11,6 +11,11 @@ img {
     max-width: 100%;
 }
 
+.card .card-img-top {
+  height: 195px;
+  object-fit: cover;
+}
+
 .invalid-feedback {
     display: block;
 }
@@ -25,7 +30,6 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    min-height: 700px;
     background: transparent;
     z-index: 999;
 }
@@ -78,6 +82,10 @@ img {
 .nav-link,
 .nav-link:hover {
   color: inherit;
+}
+
+.tab-content {
+  min-height: 600px;
 }
 
 .badge-list {
